# shape2geojson

./: README.md  main.py  pyproject.toml
