[project]
name = "shape2geojson"
version = "1.0.0"
description = "Convert shape files to geoJSON"
authors = [{ name = "Filip Jonckers" }]
maintainers = [{ name = "Filip Jonckers" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["SHP", "shape", "shape files", "geoJSON", "JSON", "GIS", "leaflet", "Python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats :: JSON",
    "Topic :: Scientific/Engineering :: GIS",

]

requires-python = ">=3.14"

dependencies = [
    "geopandas>=1.1.2",
]

